# NPB

./: README.md  setup.cfg
config/: ppb.ini
src/npb/: __init__.py  __main__.py  npb.py  upload_files.py  utils.py
tests/: test_imports.py  test_upload.py
