[metadata]
name = NPB
version = 0.0.1-dev
description = Nextcloud Paste Bin
long_description = file: README.md
author = Hendrik Klug
author_email = klugh@ethz.ch
url = https://github.com/Jimmy2027/PPB
keywords =
    personal-paste-bin

provides = npb

license = GNUv3
license_file = LICENSE

[options]
python_requires = >=3.7
packages = find:
package_dir =
    = src
install_requires =
    requests
    pygments
    pymongo
    pyocclient
    modun @ git+https://github.com/Jimmy2027/MODUN.git

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    npb = npb.__main__:main

[options.extras_require]
testing =
    pytest

